<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>helio-frontend</artifactId>
		<groupId>eu.heliovo</groupId>
		<version>0.4-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<groupId>eu.heliovo</groupId>
	<artifactId>helio-portal</artifactId>
	<name>helio-portal</name>
	<version>0.4-SNAPSHOT</version>
	<packaging>war</packaging>
	<description>
		TODO: Add description in helio-frontend/helio-portal/pom.xml
  </description>


	<!-- NOTEWORTHY -->
	<!-- ${grails.version} cannot be resolved in the Grails plugin. Replace 
		the version manually -->
	<!-- Do NOT forget to set MAVEN_OPTS = -XX:MaxPermSize=192m or to add -XX:MaxPermSize=192m 
		to the JRE JVM (Window -> Preferences -> Java -> Installed JREs -> [select 
		current] -> Edit -> [edit "Default VM Arguments"]) -->

	<properties>
		<grails.version>1.3.7</grails.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.grails</groupId>
			<artifactId>grails-bootstrap</artifactId>
			<version>1.3.7</version>
			<exclusions>
				<exclusion>
					<groupId>org.codehaus.gpars</groupId>
					<artifactId>gpars</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.codehaus.gant</groupId>
					<artifactId>gant_groovy1.7</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.gparallelizer</groupId>
					<artifactId>GParallelizer</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.codehaus.gant</groupId>
					<artifactId>gant_groovy1.6</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.ant</groupId>
					<artifactId>ant</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.ant</groupId>
					<artifactId>ant-launcher</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.ivy</groupId>
					<artifactId>ivy</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.grails</groupId>
			<artifactId>grails-crud</artifactId>
			<version>1.3.7</version>
			<exclusions>
				<exclusion>
					<groupId>org.grails</groupId>
					<artifactId>grails-docs</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.ant</groupId>
					<artifactId>ant</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.ant</groupId>
					<artifactId>ant-launcher</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-test</artifactId>
				</exclusion>
				<exclusion>
					<groupId>radeox</groupId>
					<artifactId>radeox</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-digester</groupId>
					<artifactId>commons-digester</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.persistence</groupId>
					<artifactId>persistence-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.grails</groupId>
			<artifactId>grails-gorm</artifactId>
			<version>1.3.7</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.ant</groupId>
					<artifactId>ant</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.ant</groupId>
					<artifactId>ant-launcher</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-digester</groupId>
					<artifactId>commons-digester</artifactId>
				</exclusion>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-commons-annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>antlr</groupId>
					<artifactId>antlr</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.grails</groupId>
			<artifactId>grails-test</artifactId>
			<version>1.3.7</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.1.2</version>
		</dependency>

		<dependency>
			<groupId>taglibs</groupId>
			<artifactId>standard</artifactId>
			<version>1.1.2</version>
		</dependency>

		<!-- Grails defaults to Ehache for the second-level Hibernate cache. -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-ehcache</artifactId>
			<version>3.3.1.GA</version>
			<exclusions>
				<!-- See http://www.slf4j.org/faq.html#IllegalAccessError -->
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>

				<!-- We are pulling in ehcache-core below -->
				<exclusion>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core</artifactId>
			<version>1.7.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- For ease of development and testing, we include the HSQLDB database. -->
		<dependency>
			<!-- Changed for compatibility -->
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.10</version>
		</dependency>

		<!-- Use Log4J for logging. This artifact also pulls in the Log4J JAR. -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.5.8</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.5.8</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Needed in the case of AOP usage -->
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.6.8</version>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.6.8</version>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.3</version>
		</dependency>

		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>

		<dependency>
			<groupId>commons-pool</groupId>
			<artifactId>commons-pool</artifactId>
			<version>1.5.3</version>
		</dependency>

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
			<exclusions>
				<exclusion>
					<!-- Needed to prevent double inclusion of commons-logging -->
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
				<exclusion>
					<!-- Needed to prevent double inclusion of xml-apis -->
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Not including oscache results in a warning: 2011-01-12 15:41:33,881 
			[main] ERROR spring.BeanBuilder - WARNING: Your cache provider is set to 
			'com.opensymphony.oscache.hibernate.OSCacheProvider' in DataSource.groovy, 
			however the class for this provider cannot be found. Using Grails' default 
			cache provider: 'net.sf.ehcache.hibernate.EhCacheProvider' -->

		<dependency>
			<groupId>opensymphony</groupId>
			<artifactId>oscache</artifactId>
			<version>2.4</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>eu.heliovo</groupId>
			<artifactId>helio-clientapi</artifactId>
			<version>0.4-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<!-- grails needs junit to be in compile scope -->
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<type>pom</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.grails</groupId>
			<artifactId>grails-docs</artifactId>
			<version>1.3.7</version>
			<type>pom</type>
			<scope>compile</scope>
		</dependency>
	</dependencies>

	<build>
		<testSourceDirectory>test/unit</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<pluginManagement />

		<plugins>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/resources</outputDirectory>
							<resources>
								<resource>
									<directory>src/resources</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.grails</groupId>
				<artifactId>grails-maven-plugin</artifactId>
				<version>1.3.7</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<goals>
							<goal>init</goal>
							<goal>maven-clean</goal>
							<goal>validate</goal>
							<goal>config-directories</goal>
							<goal>maven-compile</goal>
							<goal>maven-test</goal>
							<goal>maven-war</goal>
							<goal>maven-functional-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>tools</id>
			<activation>
				<property>
					<name>java.vendor</name>
					<value>Sun Microsystems Inc.</value>
				</property>
			</activation>
			<dependencies>
				<dependency>
					<groupId>com.sun</groupId>
					<artifactId>tools</artifactId>
					<version>${java.version}</version>
					<scope>system</scope>
					<systemPath>${java.home}/../lib/tools.jar</systemPath>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>
